--- a/templates/register.html
+++ b/templates/register.html
@@ -57,6 +57,23 @@
       <i class="fa fa-key icon"></i>
       <input class="input-field" type="password" placeholder="Repeat Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" name="confirmPassword">
     </div>
+
+    <div class="input-container" data-tip="Select one or many types of content you'd like to see in your feed.">
+        <div class="checkbox">
+          <label><input type="checkbox" value="politics">Politics</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="science">Science</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="sports">Sports</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="entertainment">Entertainment</label>
+        </div>
+    </div>
+
+
     <hr>
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
