--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,8 +27,8 @@
     <ul>
       <li><a href="{{ websiteUrl }}"><i class="fa fa-home"></i> Home</a></li>
       {% if session.logged_in %}
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li> -->
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li> -->
+      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
       {% else %}
@@ -47,8 +47,8 @@
     <ul>
       <li><a href="{{ websiteUrl }}{{ url_for('recent_feed') }}"><i class="fa fa-rss"></i> RSS Feed</a></li>
       {% if session.logged_in %}
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li> -->
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li> -->
+      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
       {% else %}
