-Fix: Issue in profile -Fix: Issue in edit profile -Fix: Authors view -Enhc: Post status in author wise blogs.

--- a/templates/userpost.html
+++ b/templates/userpost.html
@@ -4,14 +4,22 @@
 <div class="container">
 	<ul class="responsive-table">
 	  <li class="table-header" style="color: white">
+		<div class="col col-2">Status</div>
 	    <div class="col col-2">Title</div>
 	    <div class="col col-3">Modified Date</div>
 	    <div class="col col-1">Blogs</div>
 	  </li>
 	  {% for x in posts %}
 	  <li class="table-row">
+		<div class="col col-10" data-label="Blog-Title">
+		{% if x.poststatus == 1 %}
+		<i class="fa fa-check-circle" style="color:#008000;" aria-hidden="true"></i>
+		{% elif x.poststatus == -1 %}
+		<i class="fa fa-times-circle-o" style="color:#FF0000;" aria-hidden="false"></i>
+		{% endif %}
+		</div>
 	    <div class="col col-2" data-label="Blog-Title">{{ x.posttitle}}</div>
-	    <div class="col col-3" data-label="Last-Modified-Date">{{ x.postdate[0:10] }}</div>
+	    <div class="col col-3" data-label="Last-Modified-Date">{{ x.postdate }}</div>
 	    <div class="col col-1" data-label="Blog"><a href="/post/{{x.posturl}}">View</a></div>
 	  </li>
 	{% else %}
