-Fix: Showing archives of logged in user -Fix: showing status of each post in archives -Showing profile and option to edit

--- a/templates/userpost.html
+++ b/templates/userpost.html
@@ -11,7 +11,7 @@
 	  </li>
 	  {% for x in posts %}
 	  <li class="table-row">
-		<div class="col col-10" data-label="Blog-Title">
+		<div class="col col-10" data-label="Blog-Status">
 		{% if x.poststatus == 1 %}
 		<i class="fa fa-check-circle" style="color:#008000;" aria-hidden="true"></i>
 		{% elif x.poststatus == -1 %}
