--- a/templates/archive.html
+++ b/templates/archive.html
@@ -12,9 +12,9 @@
 <div class="container">
 	<ul class="responsive-table">
 	  <li class="table-header" style="color: white">
-	  	{% if not session.logged_in %}
+		  {% if not session.logged_in %}
 	  	<div class="col col-2">Author Name</div>
-	  	{% endif %}
+		  {% endif %}
 	    <div class="col col-2">Title</div>
 	    <div class="col col-3">Modified Date</div>
 	    <div class="col col-1">Blogs</div>
@@ -23,9 +23,16 @@
 	  <li class="table-row">
 	  	{% if not session.logged_in %}
 	  	<div class="col col-4" data-label="Blog-Title">{{ x.authorname}}</div>
-	  	{% endif %}
-	    <div class="col col-2" data-label="Blog-Title">{{ x.posttitle}}</div>
-	    <div class="col col-3" data-label="Last-Modified-Date">{{ x.postdate[0:10] }}</div>
+		  {% endif %}
+	    <div class="col col-2" data-label="Blog-Title">
+			{% if x.poststatus == 1 %}
+			<i class="fa fa-check-circle" style="color:#008000;" aria-hidden="true"></i>
+			{% elif x.poststatus == -1 %}
+			<i class="fa fa-times-circle-o" style="color:#FF0000;" aria-hidden="false"></i>
+			{% endif %}
+			{{ x.posttitle}}
+		</div>
+	    <div class="col col-3" data-label="Last-Modified-Date">{{ x.postdate }}</div>
 	    <div class="col col-1" data-label="Blog"><a href="/post/{{x.posturl}}">View</a></div>
 	  </li>
 	{% else %}
