--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
     <ul>
       <li><a href="{{ websiteUrl }}"><i class="fa fa-home"></i> Home</a></li>
       {% if session.logged_in %}
-      <li><a href="{{ websiteUrl }}{{ url_for('editPro') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getProfile') }}"><i class="fa fa-eye "></i> Profile</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
@@ -46,7 +46,7 @@
     <ul>
       <li><a href="{{ websiteUrl }}{{ url_for('recent_feed') }}"><i class="fa fa-rss"></i> RSS Feed</a></li>
       {% if session.logged_in %}
-      <li><a href="{{ websiteUrl }}{{ url_for('editPro') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getProfile') }}"><i class="fa fa-eye "></i> Profile</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
