--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,16 +27,15 @@
     <ul>
       <li><a href="{{ websiteUrl }}"><i class="fa fa-home"></i> Home</a></li>
       {% if session.logged_in %}
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li> -->
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li> -->
+      <li><a href="{{ websiteUrl }}{{ url_for('getProfile') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
       {% else %}
       <li><a href="{{ websiteUrl }}{{ url_for('doRegister') }}"><i class="fa fa-plus-square "></i> New User</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('login') }}"><i class="fa fa-sign-in"></i> Login</a></li>
-      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-history"></i> Archive</a></li>
       {% endif %}
-      
+      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-history"></i> Archive</a></li>
     </ul>
   </header>
   <main>
@@ -47,16 +46,16 @@
     <ul>
       <li><a href="{{ websiteUrl }}{{ url_for('recent_feed') }}"><i class="fa fa-rss"></i> RSS Feed</a></li>
       {% if session.logged_in %}
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-eye "></i> Profile</a></li> -->
-      <!-- <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li> -->
+      <li><a href="{{ websiteUrl }}{{ url_for('getProfile') }}"><i class="fa fa-eye "></i> Profile</a></li>
+      <li><a href="{{ websiteUrl }}{{ url_for('getAdminList') }}"><i class="fa fa-user "></i> Authors</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('publish') }}"><i class="fa fa-plus-square "></i> New Content</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
       {% else %}
       <li><a href="{{ websiteUrl }}{{ url_for('doRegister') }}"><i class="fa fa-plus-square "></i> New User</a></li>
       <li><a href="{{ websiteUrl }}{{ url_for('login') }}"><i class="fa fa-sign-in"></i> Login</a></li>
-      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-history"></i> Archive</a></li>
-      {% endif %}
       
+      {% endif %}
+      <li><a href="{{ websiteUrl }}{{ url_for('archive') }}"><i class="fa fa-history"></i> Archive</a></li>
     </ul>
     
     
